# JNet

./: .gitignore  CMakeLists.txt  README.md  localIP.sh  setup.sh
building/: client.sh  server.sh
src/: Client.cpp  Client.hpp  ClientDeclaration.hpp  Context.cpp  Context.hpp  Server.cpp  Server.hpp  ServerDeclaration.hpp  defines.hpp  main.cpp  message.cpp  message.hpp  serverbase.hpp  shorteners.hpp
src/ClientServerBase/: IO_Base.hpp  enums.hpp
src/DataStructures/: BufferManager.hpp
src/Exceptions/: BadPacketError.hpp  exceptions.hpp
src/Flags/: flags.hpp
src/IO_templates/: BasicClient.hpp  IO_ServerInterface.hpp
src/Interfaces/: IO_ClientInterface.cpp  IO_ClientInterface.hpp  IO_ServerInterface.hpp
src/Messages/: communication.hpp  message.cpp  message.hpp
src/TCP/: Client.hpp  Connection.hpp  Server.hpp  shorteners.hpp
src/TS/: queue.hpp  ts.hpp  tsqueue.hpp
src/UDP/: Client.cpp  Client.hpp  IncomingMethod.hpp  PacketWrapperChecker.hpp  ReuseablePacket.hpp  Sender.hpp  SenderDeclaration.hpp  Server.cpp  Server.hpp  ServerIncomingCallback.hpp  ServerIncomingCallbackDeclaration.hpp  ServerIncomingQueue.hpp  ServerIncomingQueueDeclaration.hpp  ServerOutgoingQueue.hpp  ServerOutgoingQueueDeclaration.hpp  ServerPacketQueue.hpp  ServerQueueCallbackHelper.hpp  Serverqueue.hpp  ServerqueueDeclaration.hpp  packet.hpp  shorteners.hpp  udp.hpp
src/UDP/Buffer/: BufferManager.hpp  BufferManagerDeclaration.hpp  ReuseableBuffer.hpp  buffer.hpp
